--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/aos/dist/aos.css",
-              "node_modules/aos/dist/aos.scss"
+              "node_modules/aos/dist/aos.css"
+
             ],
             "scripts": [
               "node_modules/aos/dist/aos.js"
@@ -45,13 +45,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
                 }
               ],
               "fileReplacements": [
