--- a/angular.json
+++ b/angular.json
@@ -32,11 +32,15 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/aos/dist/aos.css"
+              "node_modules/aos/dist/aos.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+
 
             ],
             "scripts": [
               "node_modules/aos/dist/aos.js"
+
 
             ]
           },
